# boltzmann

./: .gitignore  README.m  README.md  async_dataset.py  asyncio_miner.py  aval.py  baseline.py  clean.py  common.py  compression.py  constants.py  dataset.py  deep.py  docker_run.sh  eval.py  fast_miner.py  fdeep.py  fsdp.py  fsdp_triton.py  hparams.json  hparams.py  hparams_cache.json  llama2_model.py  m2.py  master.py  miner.py  my_fairscale.py  norms.py  print.py  pyproject.toml  requirements.txt  run.sh  start.sh  test.ipynb  testmask.py  testmodel.py  tests3.ipynb  v2.py  val.ipynb  validator.py
boltz/: checkpoint.py  common.py  config_manager.py  metrics.py  optimizer.py  utils.py
boltz/datasets/: __init__.py  dataset.py  download_tokenizer.py  titan_dataset.py  titan_dataset_async.py
boltz/datasets/tokenizer/: __init__.py  sentencepiece.py
boltz/models/: __init__.py  llama2_model.py  norms.py
boltz/parallelisms/: __init__.py  parallel_dims.py  parallelize_llama.py  pipeline_llama.py  pipelining_utils.py  utils.py
boltzmann/: eval.py  miner.py
boltzmann/rewrite/: dataset.py  legacy.py  logger.py  loss.py  main.py  miner.py  model.py  settings.py  validator.py  viz.py
cont/: common.py  hparams.py  validator.py
cont/rewrite/: dataset.py  loss.py  main.py  miner.py  model.py  validator.py
scripts/: run.sh  start.sh  start_distributed.sh
tests/: legacy_miner.py  legacy_validator.py  test.ipynb  tests3.ipynb  val.ipynb
tools/: clean.py
train_configs/: llama2_13b.toml  llama2_70b.toml  llama3_8b.toml
(+2 files in other folders)
