[project]
name = "boltzmann"
version = "0.1.0"
description = "Incentivized Training over Wide Web with 1000x model compression."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bt-decode==0.2.0a0",
    "bittensor>=8.2.0",
    "boto3>=1.35.36",
    "safetensors>=0.4.5",
    "torch>=2.4.1",
    "transformers>=4.45.2",
    "python-dotenv>=1.0.1",
    "datasets>=3.0.1",
    "torchvision>=0.19.1",
    "wandb>=0.18.3",
    "typer>=0.12.5",
    "numpy>=2.0.2",
    "aioboto3>=13.2.0",
    "loguru>=0.7.2",
    "uvloop>=0.21.0",
    "aiofiles>=24.1.0",
    "ruff>=0.6.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cont"]
